Fix overflow on forumla node

--- a/apps/workflows/styles/_workflow.scss
+++ b/apps/workflows/styles/_workflow.scss
@@ -93,6 +93,13 @@
     height: 100%;
     overflow: hidden;
     width: 100%;
+
+    turbo-frame {
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+      overflow: hidden;
+    }
   }
 
   .workflow-node {
